# diskblaze-cli

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
diskblaze/: __init__.py  cli.py  client.py  sync.py  watch.py
tests/: test_client.py  test_config.py  test_features.py  test_sync.py
