[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "diskblaze"
version = "0.1.3"
description = "Fast Python client and CLI for the DiskBlaze storage API — uploads, downloads, search, and more."
readme = "README.md"
requires-python = ">=3.10"
license = "Apache-2.0"
license-files = ["LICENSE", "NOTICE"]
keywords = ["diskblaze", "storage", "cli", "upload", "download", "s3", "graphql"]
authors = [{ name = "DiskBlaze Authors" }]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Utilities",
]
dependencies = [
  "requests>=2.31",
  "rich>=13.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "requests-mock>=1.11",
  "ruff>=0.6",
  "ty>=0.0.1a",
]
shell = [
  "argcomplete>=3.0",
]

[project.urls]
Homepage = "https://diskblaze.com"
Repository = "https://github.com/diskblaze/diskblaze-cli"
Issues = "https://github.com/diskblaze/diskblaze-cli/issues"

[project.scripts]
diskblaze = "diskblaze.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["diskblaze"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["diskblaze", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W", "C4", "SIM"]
ignore = ["B008", "C401", "C408", "SIM105"]

[tool.ruff.lint.isort]
known-first-party = ["diskblaze"]

[tool.ty]
environment = { python-version = "3.10" }

